FIX Display on mobile phone
- BKG color and height for Body

--- a/css/style.css
+++ b/css/style.css
@@ -15,7 +15,7 @@ body {
     display: flex;
     flex-direction: column;
     align-items: center;
-    height: 100vh;
+    height: 90vh;
     margin: 0 auto;
     background-color: grey;
     font-family: "Roboto";
@@ -24,6 +24,7 @@ body {
     gap:9px;
     line-height: 1.5;
     min-height: 750px;
+    background-color: var(--White);
 }
 
 #container {
